@@ -78,6 +78,7 @@
 	- permit both relative/absolute paths, display 'P' when verifying.
 	- resurrect automagic perl(foo) dependency generation.
 	- add BETA-GPG-KEY (but not in headers using %%pubkey yet).
+	- disable perl module magic rule.
 
 4.0.4 -> 4.1:
 	- loosely wire beecrypt library into rpm.
